@@ -1,7 +1,7 @@
 Package: kknn
 Title: Weighted k-Nearest Neighbors
 Version: 1.3.2
-Date: 2016-03-31
+Date: 2017-06-01
 Authors@R: c(
     person("Klaus", "Schliep", email = "klaus.schliep@gmail.com", role = c("aut", "cre")),
     person("Klaus", "Hechenbichler", role = "aut"),
