@@ -1,3 +1,11 @@
+            CHANGES IN KKNN VERSION 1.3.2
+
+OTHER CHANGES
+
+    o added native routine registration
+
+
+
             CHANGES IN KKNN VERSION 1.3.1
 
 OTHER CHANGES
